// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kotlinOkhttp > curl case: 'adds basic auth credentials' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("Authorization", Credentials.basic("user", "pass"))
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'doesn\\'t add empty cookies' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'doesn\\'t add empty headers' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'escapes single quotes in JSON body' 1`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("application/json")
val body = RequestBody.create(mediaType, "\\"hell'o\\"")
val request = Request.Builder()
  .url("https://editor.scalar.com/test")
  .post(body)
  .addHeader("Content-Type", "application/json")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles JSON body with special charac…' 1`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("application/json")
val body = RequestBody.create(mediaType, "{\\"key\\":\\"\\\\\\"quotes\\\\\\" and \\\\\\\\backslashes\\\\\\\\\\",\\"nested\\":{\\"array\\":[\\"item1\\",null,null]}}")
val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .addHeader("Content-Type", "application/json")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles URLs with dollar sign charact…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com/path\\$with\\$dollars")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles URLs with dollar signs in pat…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com/api\\$v1/prices?amount=%2450.00")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles URLs with dollar signs in que…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com?price=%24100&currency=USD%24")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles binary data flag' 1`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("application/octet-stream")
val body = RequestBody.create(mediaType, "binary content")
val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles compressed response' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("Accept-Encoding", "gzip, deflate")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles cookies with special characte…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("Cookie", "special%3Bcookie=value%20with%20spaces")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles empty URL' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles extremely long URLs' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles headers with empty values' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("X-Empty", "")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles multipart form data content t…' 1`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("user", null, RequestBody.create(MediaType.parse("application/json;charset=utf-8"), "{\\"name\\":\\"scalar\\"}"))
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles multipart form data content t…' 2`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "test.txt", RequestBody.create(MediaType.parse("text/plain"), File("test.txt")))
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles multipart form data with JSON…' 1`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("multipart/form-data")
val body = RequestBody.create(mediaType, "{\\"foo\\":\\"bar\\"}")
val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .addHeader("Content-Type", "multipart/form-data")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles multipart form data with empt…' 1`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "", RequestBody.create(MediaType.parse("application/octet-stream"), File("")))
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles multipart form data with files' 1`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "test.txt", RequestBody.create(MediaType.parse("application/octet-stream"), File("test.txt")))
  .addFormDataPart("field", "value")
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles multipart form data with sing…' 1`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("field'name", "value")
  .addFormDataPart("file'name", "test.txt", RequestBody.create(MediaType.parse("application/octet-stream"), File("test.txt")))
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles multiple headers with same na…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("X-Custom", "value1")
  .addHeader("X-Custom", "value2")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles special characters in URL' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com/path%20with%20spaces/[brackets]")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles special characters in auth cr…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("Authorization", Credentials.basic("user@example.com", "pass:word!"))
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles special characters in query p…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com?q=hello%20world%20%26%20more&special=!%40%23%24%25%5E%26*()")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles undefined auth object' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles url-encoded form data with si…' 1`] = `
"val client = OkHttpClient()

val body = FormBody.Builder()
  .add("field'name", "value")
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'handles url-encoded form data with sp…' 1`] = `
"val client = OkHttpClient()

val body = FormBody.Builder()
  .add("special chars!@#", "value")
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'has JSON body' 1`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("application/json")
val body = RequestBody.create(mediaType, "{\\"hello\\":\\"world\\"}")
val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .addHeader("Content-Type", "application/json")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'has cookies' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("Cookie", "foo=bar; bar=foo")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'has headers' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .addHeader("Content-Type", "application/json")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'has query string' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com?foo=bar&bar=foo")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'joins query string parameters with & …' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com/api?existing=1&foo=bar")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'leaves non-JSON multipart values unto…' 1`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("props", null, RequestBody.create(MediaType.parse("application/json"), "not json"))
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'omits auth when not provided' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'omits auth when password is missing' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'omits auth when username is missing' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'prettifies JSON body' 1`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("application/json")
val body = RequestBody.create(mediaType, "{\\"nested\\":{\\"array\\":[1,2,3],\\"object\\":{\\"foo\\":\\"bar\\"}},\\"simple\\":\\"value\\"}")
val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .addHeader("Content-Type", "application/json")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'pretty-prints --data bodies whose mim…' 1`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("application/vnd.api+json")
val body = RequestBody.create(mediaType, "{\\"a\\":1}")
val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'pretty-prints --data bodies whose mim…' 2`] = `
"val client = OkHttpClient()

val mediaType = MediaType.parse("application/json;charset=utf-8")
val body = RequestBody.create(mediaType, "{\\"a\\":1}")
val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'pretty-prints --form parts whose cont…' 1`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("props", null, RequestBody.create(MediaType.parse("application/vnd.custom+json"), "{\\"a\\":1}"))
  .build()

val request = Request.Builder()
  .url("https://example.com")
  .post(body)
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'pretty-prints JSON multipart parts al…' 1`] = `
"val client = OkHttpClient()

val body = MultipartBody.Builder()
  .setType(MultipartBody.FORM)
  .addFormDataPart("file", "filename", RequestBody.create(MediaType.parse("application/octet-stream"), File("filename")))
  .addFormDataPart("props", null, RequestBody.create(MediaType.parse("application/json"), "{\\"name\\":\\"\\",\\"description\\":\\"\\",\\"created_at\\":null}"))
  .build()

val request = Request.Builder()
  .url("https://example.com/widget/v1/widgets")
  .post(body)
  .addHeader("Content-Type", "multipart/form-data")
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'quotes a URL whose query string has n…' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com/api?param1=value1&param2=value2")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'returns a POST request' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .post(RequestBody.create(null, ""))
  .build()

val response = client.newCall(request).execute()"
`;

exports[`kotlinOkhttp > curl case: 'returns a basic request' 1`] = `
"val client = OkHttpClient()

val request = Request.Builder()
  .url("https://example.com")
  .get()
  .build()

val response = client.newCall(request).execute()"
`;
